--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -15,15 +15,25 @@
 </head>
 <body>
     <form action="">
+        <div class="toprightbar">
+            <a href=""><i class="fas fa-globe"> 繁體中文 <i class="fas fa-angle-down"></i></a></i>
+            <input type="search" name="" id="search" value="找商品">
+                <a href="" class="search"><i class="fas fa-search"></i></a>
+            <a href=""><i class="fas fa-comment"></i></a>
+            <a href=""><i class="fas fa-user"></i></a>
+            <a href=""><i class="fas fa-shopping-bag"></i></a>
+        </div>
     <div class="topnav">
-        <img src=".\img\Ama.png" width="64px" height="64px" alt="">
+        <div class="logo">
+            <img src=".\img\Ama.png" width="64px" height="64px" alt="">
+        </div>
         <a href="">首頁</a>
         <a href="">品牌故事</a>
-        <a href="">所有商品<i class="fas fa-angle-down"></i></a>
-        <a href="">居家生活<i class="fas fa-angle-down"></i></a>
-        <a href="">玩具公仔<i class="fas fa-angle-down"></i></a>
+        <a href="">所有商品 <i class="fas fa-angle-down"></i></a>
+        <a href="">居家生活 <i class="fas fa-angle-down"></i></a>
+        <a href="">玩具公仔 <i class="fas fa-angle-down"></i></a>
         <a href="">阿狗書店</a>
-        <a href="">手機周邊<i class="fas fa-angle-down"></i></a>
+        <a href="">手機周邊 <i class="fas fa-angle-down"></i></a>
         <a href="">不想運動運動會</a>
         <a href="">獸可思夜生活館</a>
     </div>
