--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -10,7 +10,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href=".\css\style.css">
-    <link rel="shortcut icon" type="image/gif" href=".\img\crrewweascx.gif">
+    <link rel="shortcut icon" type="image/png" href=".\img\bg.png">
     <title>🐾藍阿狗恭腰生活｜FuNsCases 官方網站</title>
 </head>
 <body>
@@ -27,17 +27,19 @@
         <div class="logo">
             <img src=".\img\Ama.png" width="64px" height="64px" alt="">
         </div>
-        <a href="">首頁</a>
-        <a href="">品牌故事</a>
-        <a href="">所有商品 <i class="fas fa-angle-down"></i></a>
-        <a href="">居家生活 <i class="fas fa-angle-down"></i></a>
-        <a href="">玩具公仔 <i class="fas fa-angle-down"></i></a>
-        <a href="">阿狗書店</a>
-        <a href="">手機周邊 <i class="fas fa-angle-down"></i></a>
-        <a href="">不想運動運動會</a>
-        <a href="">獸可思夜生活館</a>
+        <nav>
+            <a href="">首頁</a>
+            <a href="">品牌故事</a>
+            <a href="">所有商品 <i class="fas fa-angle-down"></i></a>
+            <a href="">居家生活 <i class="fas fa-angle-down"></i></a>
+            <a href="">玩具公仔 <i class="fas fa-angle-down"></i></a>
+            <a href="">阿狗書店</a>
+            <a href="">手機周邊 <i class="fas fa-angle-down"></i></a>
+            <a href="">不想運動運動會</a>
+            <a href="">獸可思夜生活館</a>
+        </nav>
     </div>
-        <div class="banner"><img src=".\img\crrewweascx.gif"></div>
+        <div class="banner"><img src=".\img\bg.png"></div>
     <div class="txt">
         <h2>新品上市</h2>
         <hr>
@@ -101,7 +103,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>SOSO<br>獨家款安全帽</h3>
+                    <h3>SOSO獨家款安全帽</h3>
                     <p>NT$999</p>
                     <s>NT$1200</s>
                 </div>
@@ -117,7 +119,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>追風阿瑪(夜光版)<br>安全帽</h3>
+                    <h3>追風阿瑪(夜光版)安全帽</h3>
                     <p>NT$2,440</p>
                     <s>NT$2,600</s>
                 </div>
@@ -133,7 +135,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>後宮歡樂派對<br>安全帽</h3>
+                    <h3>後宮歡樂派對安全帽</h3>
                     <p>NT$1,800</p>
                     <s>NT$2,000</s>
                 </div>
@@ -149,7 +151,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>新年送元寶燙<br>燙金貼紙</h3>
+                    <h3>新年送元寶燙燙金貼紙</h3>
                     <p>NT$120</p>
                     <s></s>
                 </div>
@@ -165,7 +167,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>後宮去旅行<br>純棉帽T</h3>
+                    <h3>後宮去旅行純棉帽T</h3>
                     <p>NT$1,380 ~ NT$1,580</p>
                     <s></s>
                 </div>
@@ -243,7 +245,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>SOSO<br>獨家款安全帽</h3>
+                    <h3>SOSO獨家款安全帽</h3>
                     <p>NT$999</p>
                     <s>NT$1200</s>
                 </div>
@@ -259,7 +261,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>追風阿瑪(夜光版)<br>安全帽</h3>
+                    <h3>追風阿瑪(夜光版)安全帽</h3>
                     <p>NT$2,440</p>
                     <s>NT$2,600</s>
                 </div>
@@ -275,7 +277,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>後宮歡樂派對<br>安全帽</h3>
+                    <h3>後宮歡樂派對安全帽</h3>
                     <p>NT$1,800</p>
                     <s>NT$2,000</s>
                 </div>
@@ -291,7 +293,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>新年送元寶燙<br>燙金貼紙</h3>
+                    <h3>新年送元寶燙燙金貼紙</h3>
                     <p>NT$120</p>
                     <s></s>
                 </div>
@@ -307,7 +309,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>後宮去旅行<br>純棉帽T</h3>
+                    <h3>後宮去旅行純棉帽T</h3>
                     <p>NT$1,380 ~ NT$1,580</p>
                     <s></s>
                 </div>
@@ -385,7 +387,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>SOSO<br>獨家款安全帽</h3>
+                <h3>SOSO獨家款安全帽</h3>
                 <p>NT$999</p>
                 <s>NT$1200</s>
             </div>
@@ -401,7 +403,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>追風阿瑪(夜光版)<br>安全帽</h3>
+                <h3>追風阿瑪(夜光版)安全帽</h3>
                 <p>NT$2,440</p>
                 <s>NT$2,600</s>
             </div>
@@ -417,7 +419,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>後宮歡樂派對<br>安全帽</h3>
+                <h3>後宮歡樂派對安全帽</h3>
                 <p>NT$1,800</p>
                 <s>NT$2,000</s>
             </div>
@@ -433,7 +435,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>新年送元寶燙<br>燙金貼紙</h3>
+                <h3>新年送元寶燙燙金貼紙</h3>
                 <p>NT$120</p>
                 <s></s>
             </div>
@@ -449,7 +451,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>後宮去旅行<br>純棉帽T</h3>
+                <h3>後宮去旅行純棉帽T</h3>
                 <p>NT$1,380 ~ NT$1,580</p>
                 <s></s>
             </div>
@@ -526,11 +528,10 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>SOSO<br>獨家款安全帽</h3>
+                <h3>SOSO獨家款安全帽</h3>
                 <p>NT$999</p>
                 <s>NT$1200</s>
-            </div>
-        </div>
+            </div</div>
     </div>
     <div class="page">
         <a href="">1</a>
@@ -542,8 +543,7 @@
     <div class="container">
         <hr>
         <div class="infoabout">
-            <p>相關資訊</p>
-            <a href="">品牌故事</a>
+            <p>相關資訊</p     <a href="">品牌故事</a>
             <a href="">退貨退款須知</a>
             <a href="">會員招募</a>
             <a href="">常見問題</a>
@@ -557,10 +557,10 @@
         <p>授權合作信箱 ： -------- @gmail.com</p>
         <p>批發合作信箱 ： -------- @gmail.com</p>
     </div>
-    </div>
-    <footer><p>🐾藍阿狗恭腰生活© 2021 FuNsCases. All Rights Reserved.
-    <br>This WebForm isn't a Real Website, It's a Program Class Exercise</p>
+</div>
+    <footer><p>🐾藍阿狗恭腰生活© 2021 FuNsCases. All Rights Reserved.</p>
+        <p>This WebForm isn't a Real Website, It's a Program Class Exercise</p>
 </footer>
 </form>
-</body>
-</html>
+</b
+</h
