--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -557,10 +557,10 @@
         <p>授權合作信箱 ： -------- @gmail.com</p>
         <p>批發合作信箱 ： -------- @gmail.com</p>
     </div>
-</div>
     <footer><p>🐾藍阿狗恭腰生活© 2021 FuNsCases. All Rights Reserved.</p>
-        <p>This WebForm isn't a Real Website, It's a Program Class Exercise</p>
+        <p><br>This WebForm isn't a Real Website, It's a Program Class Exercise</p>
 </footer>
+</div>
 </form>
-</b
-</h
+</body>
+</html>
