--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -27,6 +27,7 @@
         <div class="logo">
             <img src=".\img\Ama.png" width="64px" height="64px" alt="">
         </div>
+        <nav>
         <a href="">首頁</a>
         <a href="">品牌故事</a>
         <a href="">所有商品 <i class="fas fa-angle-down"></i></a>
@@ -36,6 +37,7 @@
         <a href="">手機周邊 <i class="fas fa-angle-down"></i></a>
         <a href="">不想運動運動會</a>
         <a href="">獸可思夜生活館</a>
+        </nav>
     </div>
         <div class="banner"><img src=".\img\bg.png"></div>
     <div class="txt">
