--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -16,27 +16,27 @@
 <body>
     <form action="">
         <div class="toprightbar">
-            <a href=""><i class="fas fa-globe"> 繁體中文 <i class="fas fa-angle-down"></i></a></i>
+            <a href="#"><i class="fas fa-globe"> 繁體中文 <i class="fas fa-angle-down"></i></a></i>
             <input type="search" name="" id="search" value="找商品">
                 <a href="" class="search"><i class="fas fa-search"></i></a>
-            <a href=""><i class="fas fa-comment"></i></a>
-            <a href=""><i class="fas fa-user"></i></a>
-            <a href=""><i class="fas fa-shopping-bag"></i></a>
+            <a href="#"><i class="fas fa-comment"></i></a>
+            <a href="#"><i class="fas fa-user"></i></a>
+            <a href="#"><i class="fas fa-shopping-bag"></i></a>
         </div>
     <div class="topnav">
         <div class="logo">
             <img src=".\img\Ama.png" width="64px" height="64px" alt="">
         </div>
         <nav>
-        <a href="">首頁</a>
-        <a href="">品牌故事</a>
-        <a href="">所有商品 <i class="fas fa-angle-down"></i></a>
-        <a href="">居家生活 <i class="fas fa-angle-down"></i></a>
-        <a href="">玩具公仔 <i class="fas fa-angle-down"></i></a>
-        <a href="">阿狗書店</a>
-        <a href="">手機周邊 <i class="fas fa-angle-down"></i></a>
-        <a href="">不想運動運動會</a>
-        <a href="">獸可思夜生活館</a>
+        <a href="#">首頁</a>
+        <a href="#">品牌故事</a>
+        <a href="#">所有商品 <i class="fas fa-angle-down"></i></a>
+        <a href="#">居家生活 <i class="fas fa-angle-down"></i></a>
+        <a href="#">玩具公仔 <i class="fas fa-angle-down"></i></a>
+        <a href="#">阿狗書店</a>
+        <a href="#">手機周邊 <i class="fas fa-angle-down"></i></a>
+        <a href="#">不想運動運動會</a>
+        <a href="#">獸可思夜生活館</a>
         </nav>
     </div>
         <div class="banner"><img src=".\img\bg.png"></div>
@@ -174,12 +174,12 @@
             </div>
         </div>
         <div class="page">
-            <a href="">1</a>
-            <a href="">2</a>
-            <a href="">3</a>
-            <a href="">4</a>
-            <a href="">5</a>
-            <a href="">»</a>
+            <a href="#">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">»</a>
         </div>
     </div>
     <div class="txt">
@@ -316,11 +316,11 @@
             </div>
         </div>
         <div class="page">
-            <a href="">1</a>
-            <a href="">2</a>
-            <a href="">3</a>
-            <a href="">4</a>
-            <a href="">»</a>
+            <a href="#">1</a>
+            <a href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">»</a>
         </div>
     </div>
 </div>
@@ -458,11 +458,11 @@
         </div>
     </div>
     <div class="page">
-        <a href="">1</a>
-        <a href="">2</a>
-        <a href="">3</a>
-        <a href="">4</a>
-        <a href="">»</a>
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">»</a>
     </div>
 </div>
 <div class="txt">
@@ -535,21 +535,21 @@
         </div>
     </div>
     <div class="page">
-        <a href="">1</a>
-        <a href="">2</a>
-        <a href="">3</a>
-        <a href="">»</a>
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">»</a>
     </div>
 </div>
     <div class="container">
         <hr>
         <div class="infoabout">
             <p>相關資訊</p>
-            <a href="">品牌故事</a>
-            <a href="">退貨退款須知</a>
-            <a href="">會員招募</a>
-            <a href="">常見問題</a>
-            <a href="">反詐騙公告</a>
+            <a href="#">品牌故事</a>
+            <a href="#">退貨退款須知</a>
+            <a href="#">會員招募</a>
+            <a href="#">常見問題</a>
+            <a href="#">反詐騙公告</a>
     </div>
     <div  class="infoabout">
         <p>聯繫我們</p>
