--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -552,9 +552,9 @@
             <a href="#">反詐騙公告</a>
     </div>
     <div  class="infoabout">
-        <p>聯繫我們</p>
+        <a href="#">聯絡我們</a>
         <p>服務時間：週一至週五 11:00-13:00</p>
-        <p>LINE@閒聊區(只有阿狗在，小幫手不在)</p>
+        <a href="#">LINE@閒聊區(只有阿狗在，小幫手不在)</a>
         <p>客服信箱 ： -------- @gmail.com</p>
         <p>授權合作信箱 ： -------- @gmail.com</p>
         <p>批發合作信箱 ： -------- @gmail.com</p>
