--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -103,7 +103,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>SOSO<br>獨家款安全帽</h3>
+                    <h3>SOSO獨家款安全帽</h3>
                     <p>NT$999</p>
                     <s>NT$1200</s>
                 </div>
@@ -119,7 +119,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>追風阿瑪(夜光版)<br>安全帽</h3>
+                    <h3>追風阿瑪(夜光版)安全帽</h3>
                     <p>NT$2,440</p>
                     <s>NT$2,600</s>
                 </div>
@@ -135,7 +135,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>後宮歡樂派對<br>安全帽</h3>
+                    <h3>後宮歡樂派對安全帽</h3>
                     <p>NT$1,800</p>
                     <s>NT$2,000</s>
                 </div>
@@ -151,7 +151,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>新年送元寶燙<br>燙金貼紙</h3>
+                    <h3>新年送元寶燙燙金貼紙</h3>
                     <p>NT$120</p>
                     <s></s>
                 </div>
@@ -167,7 +167,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>後宮去旅行<br>純棉帽T</h3>
+                    <h3>後宮去旅行純棉帽T</h3>
                     <p>NT$1,380 ~ NT$1,580</p>
                     <s></s>
                 </div>
@@ -245,7 +245,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>SOSO<br>獨家款安全帽</h3>
+                    <h3>SOSO獨家款安全帽</h3>
                     <p>NT$999</p>
                     <s>NT$1200</s>
                 </div>
@@ -261,7 +261,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>追風阿瑪(夜光版)<br>安全帽</h3>
+                    <h3>追風阿瑪(夜光版)安全帽</h3>
                     <p>NT$2,440</p>
                     <s>NT$2,600</s>
                 </div>
@@ -277,7 +277,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>後宮歡樂派對<br>安全帽</h3>
+                    <h3>後宮歡樂派對安全帽</h3>
                     <p>NT$1,800</p>
                     <s>NT$2,000</s>
                 </div>
@@ -293,7 +293,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>新年送元寶燙<br>燙金貼紙</h3>
+                    <h3>新年送元寶燙燙金貼紙</h3>
                     <p>NT$120</p>
                     <s></s>
                 </div>
@@ -309,7 +309,7 @@
                     <input type="button" id="button" value="加入購物車">
                 </div>
                 <div class="txt">
-                    <h3>後宮去旅行<br>純棉帽T</h3>
+                    <h3>後宮去旅行純棉帽T</h3>
                     <p>NT$1,380 ~ NT$1,580</p>
                     <s></s>
                 </div>
@@ -387,7 +387,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>SOSO<br>獨家款安全帽</h3>
+                <h3>SOSO獨家款安全帽</h3>
                 <p>NT$999</p>
                 <s>NT$1200</s>
             </div>
@@ -403,7 +403,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>追風阿瑪(夜光版)<br>安全帽</h3>
+                <h3>追風阿瑪(夜光版)安全帽</h3>
                 <p>NT$2,440</p>
                 <s>NT$2,600</s>
             </div>
@@ -419,7 +419,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>後宮歡樂派對<br>安全帽</h3>
+                <h3>後宮歡樂派對安全帽</h3>
                 <p>NT$1,800</p>
                 <s>NT$2,000</s>
             </div>
@@ -435,7 +435,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>新年送元寶燙<br>燙金貼紙</h3>
+                <h3>新年送元寶燙燙金貼紙</h3>
                 <p>NT$120</p>
                 <s></s>
             </div>
@@ -451,7 +451,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>後宮去旅行<br>純棉帽T</h3>
+                <h3>後宮去旅行純棉帽T</h3>
                 <p>NT$1,380 ~ NT$1,580</p>
                 <s></s>
             </div>
@@ -528,7 +528,7 @@
                 <input type="button" id="button" value="加入購物車">
             </div>
             <div class="txt">
-                <h3>SOSO<br>獨家款安全帽</h3>
+                <h3>SOSO獨家款安全帽</h3>
                 <p>NT$999</p>
                 <s>NT$1200</s>
             </div>
@@ -561,7 +561,7 @@
     </div>
     </div>
     <footer><p>🐾藍阿狗恭腰生活© 2021 FuNsCases. All Rights Reserved.
-    <br>This WebForm isn't a Real Website, It's a Program Class Exercise</p>
+    This WebForm isn't a Real Website, It's a Program Class Exercise</p>
 </footer>
 </form>
 </body>
