--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -25,7 +25,7 @@
         </div>
     <div class="topnav">
         <div class="logo">
-            <img src=".\img\Ama.png" width="64px" height="64px" alt="">
+            <a href="#"><img src=".\img\Ama.png" width="96px" height="96px" alt=""></a>
         </div>
         <nav>
         <a href="#">首頁</a>
@@ -541,10 +541,10 @@
         <a href="#">»</a>
     </div>
 </div>
+    <hr>
     <div class="container">
-        <hr>
         <div class="infoabout">
-            <p>相關資訊</p>
+            <h2>相關資訊</h2>
             <a href="#">品牌故事</a>
             <a href="#">退貨退款須知</a>
             <a href="#">會員招募</a>
@@ -552,7 +552,7 @@
             <a href="#">反詐騙公告</a>
     </div>
     <div  class="infoabout">
-        <a href="#">聯絡我們</a>
+        <h2>聯絡我們</h2>
         <p>服務時間：週一至週五 11:00-13:00</p>
         <a href="#">LINE@閒聊區(只有阿狗在，小幫手不在)</a>
         <p>客服信箱 ： -------- @gmail.com</p>
@@ -560,9 +560,9 @@
         <p>批發合作信箱 ： -------- @gmail.com</p>
     </div>
     </div>
-    <footer><p>🐾藍阿狗恭腰生活© 2021 FuNsCases. All Rights Reserved.
-    This WebForm isn't a Real Website, It's a Program Class Exercise</p>
-</footer>
+    <footer>
+        <p>🐾藍阿狗恭腰生活© 2021 FuNsCases. All Rights Reserved.</p>
+    </footer>
 </form>
 </body>
 </html>
