--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href=".\css\style.css">
     <link rel="shortcut icon" type="image/gif" href=".\img\bg.png">
-    <title>🐾藍阿狗恭腰生活｜FuNsCases 官方網站</title>
+    <title>狐狸的後宮生活｜FuNsCases 官方網站</title>
 </head>
 <body>
     <form action="">
@@ -554,14 +554,14 @@
     <div  class="infoabout">
         <h2>聯絡我們</h2>
         <p>服務時間：週一至週五 11:00-13:00</p>
-        <a href="#">LINE@閒聊區(只有阿狗在，小幫手不在)</a>
+        <a href="#">LINE@閒聊區(只有狐狸在，小幫手不在)</a>
         <p>客服信箱 ： -------- @gmail.com</p>
         <p>授權合作信箱 ： -------- @gmail.com</p>
         <p>批發合作信箱 ： -------- @gmail.com</p>
     </div>
     </div>
     <footer>
-        <p>🐾藍阿狗恭腰生活© 2021 FuNsCases. All Rights Reserved.</p>
+        <p>🐾狐狸的後宮生活© 2021 FuNsCases. All Rights Reserved.</p>
     </footer>
 </form>
 </body>
