--- a/AgoLan/index.html
+++ b/AgoLan/index.html
@@ -25,9 +25,10 @@
         </div>
     <div class="topnav">
         <div class="logo">
+            <h1>狐狸的後宮生活｜FuNsCases 官方網站</h1>
             <a href="#"><img src=".\img\Ama.png" width="96px" height="96px" alt=""></a>
         </div>
-        <nav>
+        <nav >
         <a href="#">首頁</a>
         <a href="#">品牌故事</a>
         <a href="#">所有商品 <i class="fas fa-angle-down"></i></a>
