--- a/LINE/index.html
+++ b/LINE/index.html
@@ -230,6 +230,13 @@
         .wrapL img ,.wrapC img, .wrapR img{
             width: 100%;
         }
+        .wrapL img.icon , .wrapR img.icon{
+            width: 80px;
+            height: 80px;
+            border: 1px solid transparent;
+            border-radius: 20px;
+            margin-bottom: 30px;
+        }
         .container2{
             min-width: 1000px;
             background-color: #eee;
@@ -296,15 +303,8 @@
             margin: 40px 15px;
             text-decoration:  none;
         }
-        .copyright a#right {
-        }
         img .qrcode{
             position: relative;
-
-        }
-        .copyright a i#big{
-            
-            font-size: 32px;
         }
     </style>
 </head>
@@ -340,7 +340,7 @@
     </div>
     <div class="container">
         <div class="wrapL">
-            <i class="fab fa-line"></i>
+            <img class="icon" src="img\LINE-TODAY.png" alt="LINE TODAY">
             <h3>LINE TODAY</h3>
             <h4>隨點隨看 生活快充</h4>
             <p>最即時的新聞、影音、運動賽事和娛樂內容直播，讓你話題永不斷線，LINE TODAY陪伴您的每一天！</p>
@@ -357,7 +357,7 @@
             <img src="https://picsum.photos/900/700/?random=7">
         </div>
         <div class="wrapR">
-            <i class="fab fa-line"></i>
+            <img class="icon" src="img\LINE-POST.png" alt="LINE貼文串">
             <h3>LINE貼文串</h3>
             <h4>探索樂趣，分享生活</h4>
             <p>在貼文串追蹤你的最愛．有感內容不錯過。打造你的個人閱知頻道，探索生活大小事，啟發創意的無限可能！</p>
@@ -368,7 +368,7 @@
     </div>
     <div class="container">
         <div class="wrapL">
-            <i class="fab fa-line"></i>
+            <img class="icon" src="img\LINE-PAY.png" alt="LINE Pay">
             <h3>LINE Pay</h3>
             <h4>付款、轉帳、生活繳費，輕鬆簡單又便利！</h4>
             <p>付款簡單又便利，還能輕鬆轉帳給LINE好友，動動手指輕鬆完成日常生活各種帳單繳費， 免出門省時又省力。</p>
@@ -387,7 +387,7 @@
             <img src="https://picsum.photos/900/700/?random=9">
         </div>
         <div class="wrapR">
-            <i class="fab fa-line"></i>
+            <img class="icon" src="img\LINE-SHOP.png" alt="LINE購物">
             <h3>LINE購物</h3>
             <h4>先LINE購物再購物</h4>
             <p>涵各大購物、拍賣、精品、及票券商店，輕鬆貨比五百家，比價三千萬筆商品，再享回饋賺不停！</p>
@@ -400,7 +400,7 @@
     </div>
     <div class="container">
         <div class="wrapL">
-            <i class="fab fa-line"></i>
+            <img class="icon" style="border-color: palevioletred;" src="img\LINE-TV.png" alt="LINE TV">
             <h3>LINE TV</h3>
             <h4>共享追劇生活</h4>
             <p>和朋友一起追劇，不錯過最熱門、最潮的話題大劇，即時分享娛樂影音，展開精彩生活故事，追劇第一選擇！</p>
