--- a/LINE/index.html
+++ b/LINE/index.html
@@ -93,7 +93,7 @@
         }
 
         .banner .pic img {
-            width: 100%;
+            min-width: 1000px;
             height: 530px;
             background-color: rgba(0, 0, 0, .4);
             position: absolute;
@@ -269,7 +269,7 @@
         }
         .services .picinfo {
             display: block;
-            width: 100%;
+            min-width: 1000px;
             height: 240px;
             background-image: url('https://picsum.photos/1400/800/?random=14');
             background-color: rgba(0, 0, 0, .4);
