--- a/LINE/index.html
+++ b/LINE/index.html
@@ -93,7 +93,8 @@
         }
 
         .banner .pic img {
-            min-width: 1000px;
+            min-width: 100%;
+            width: 1000px;
             height: 530px;
             background-color: rgba(0, 0, 0, .4);
             position: absolute;
