--- a/LINE/index.html
+++ b/LINE/index.html
@@ -361,7 +361,10 @@
             left: 50%;
             width: 1px;
             height: 100%;
-            border-left: 1px dotted #666;
+            background-image: linear-gradient(black 33%, rgba(255,255,255,0) 0%);
+            background-position: right;
+            background-size: 2px 3px;
+            background-repeat: repeat-y;
         }
 
         .fldot {
@@ -472,7 +475,7 @@
         a.downappbtn {
             font-size: 20px;
             width: 54px;
-            height:54px;
+            height: 54px;
             margin-left: 5px;
             margin-right: 5px;
             padding: 0 0;
