--- a/techTNGA/index.html
+++ b/techTNGA/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    
+    <div class="contenter">
         <div class="Nav-Tab-Module">
             <div class="title">
                 <h3>五大優勢</h3>
@@ -221,6 +221,7 @@
         </div>
     </div>
 </div>
+    </div>
 </body>
 
 </html>
