--- a/LINE/index.html
+++ b/LINE/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href=".\img\600px-LINE.png">
+    <link rel="stylesheet" href="style.css">
     <style>
         * {
             font-family: Arial, sans-serif;
@@ -18,7 +19,6 @@
         body,
         html {
             scroll-behavior: smooth;
-            -webkit-overflow-scrolling: ;
         }
 
         :target {
@@ -39,14 +39,13 @@
             z-index: 50;
             min-width: 100%;
             height: 80px;
-            border-bottom: 1px solid #ddd;
             display: flex;
-            position: relative;
             position: fixed;
             opacity: 0.9;
             align-items: center;
             justify-content: center;
             background-color: white;
+            border-bottom: 1px solid #ddd;
             top: 0;
             left: 0;
         }
