--- a/LINE_RWD/index.html
+++ b/LINE_RWD/index.html
@@ -24,6 +24,38 @@
             <a class="btn-lang" href="#"><i class="fas fa-globe"></i> TW <i class="fas fa-angle-down"></i></a>
     </nav>
 
+    <div class="banner-module">
+        <div class="Content">
+            <p class="Ctext">Life on LINE</p>
+            <p class="Ctext">LINE始終陪伴在你身旁。</p>
+            <div class="downbtn">
+                <div class="dDLine"><img src="img/icon-line-w.png">
+                    <p>下載</p>
+                </div>
+                <a class="btn" href="#">
+                    <i class="fab fa-apple"></i>
+                    <i class="fas fa-download"></i>
+                </a>
+                <a class="btn" href="#">
+                    <i class="fab fa-google-play"></i>
+                    <i class="fas fa-download"></i>
+                </a>
+                <a class="btn" href="#">
+                    <i class="fas fa-desktop"></i>
+                    <i class="fas fa-download"></i>
+                </a>
+            </div>
+            <div class="scroll">
+                <div class="scrollmove">
+                    <p>Scroll</p>
+                </div>
+                <div class="linem">
+                    <div class="line"> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="software-container-module">
         <div class="infoblock-module">
             <a id="software"></a>
