--- a/LINE_RWD/index.html
+++ b/LINE_RWD/index.html
@@ -63,32 +63,32 @@
             <p>一款全新型態的通訊軟體，讓您隨時隨地享受免費傳訊、免費通話等溝通樂趣。</p>
         </div>
         <div class="col">
-            <img src="img\feature-chat.png">
+            <img src="img/feature-chat.png">
             <h3>聊天、語音通話&視訊通話</h3>
             <p>能夠和好友一對一或多人群組訊息聊天，或是進行語音、視訊通話。</p>
         </div>
         <div class="col">
-            <img src="img\feature-sticker.png">
+            <img src="img/feature-sticker.png">
             <h3>貼圖＆表情貼＆主題</h3>
             <p>使用有趣的貼圖或表情貼豐富聊天，也能更換超讚的主題來表達自己。</p>
         </div>
         <div class="col">
-            <img src="img\feature-main.png">
+            <img src="img/feature-main.png">
             <h3>主頁</h3>
             <p>可以快速連結 LINE 的各種服務，包含貼圖等多樣的內容資訊。</p>
         </div>
         <div class="col">
-            <img src="img\feature-group.png">
+            <img src="img/feature-group.png">
             <h3>社群</h3>
             <p>輕鬆分享共同興趣、開心聊出好麻吉。</p>
         </div>
         <div class="col">
-            <img src="img\feature-paste.png">
+            <img src="img/feature-paste.png">
             <h3>貼文串</h3>
             <p>供你分享你的近況，或是瞭解好友的最新消息。透過「探索」功能，能找到更多你喜愛的內容。</p>
         </div>
         <div class="col">
-            <img src="img\feature-wallet.png">
+            <img src="img/feature-wallet.png">
             <h3>錢包</h3>
             <p>使用「 LINE Pay 」可以進行安全方便的行動付款或轉帳，也能使用其他金融相關服務。</p>
         </div>
