--- a/LINE_RWD/index.html
+++ b/LINE_RWD/index.html
@@ -56,13 +56,13 @@
         </div>
     </div>
 
-    <!-- <div class="LifeonLINE-module">
+    <div class="LifeonLINE-module">
         <div class="title">
             <h3>Life on LINE</h3>
             <p>超越通訊軟體，LINE為用戶建構全新的溝通型態與豐富的數位生活，成為用戶生活中不可或缺的平台。</p>
         </div>
         <div class="wrap-module"></div>
-    </div> -->
+    </div>
 
     <div class="software-container-module">
         <div class="infoblock-module">
