--- a/LINE_RWD/index.html
+++ b/LINE_RWD/index.html
@@ -56,13 +56,25 @@
         </div>
     </div>
 
-    <div class="LifeonLINE-module">
+    <!-- <div class="LifeonLINE-module">
         <div class="title">
             <h3>Life on LINE</h3>
             <p>超越通訊軟體，LINE為用戶建構全新的溝通型態與豐富的數位生活，成為用戶生活中不可或缺的平台。</p>
         </div>
-        <div class="wrap-module"></div>
-    </div>
+        <div class="wrap-module">
+            <div class="col">
+                <img class="iconpic" src="./img/line-today-icon.png" alt="">
+                <h3>LINE TODAY</h3>
+                <span>隨點隨看 生活快充</span>
+                <p>最即時的新聞、影音、運動賽事和娛樂內容直播，讓你話題永不斷線，LINE TODAY陪伴您的每一天！</p>
+                <a href="#"> 其他詳細資訊</a>
+            </div>
+            <div class="col">
+                <img class="mainpic" src="./img/line-today.png" alt="">
+            </div>
+            
+        </div>
+    </div> -->
 
     <div class="software-container-module">
         <div class="infoblock-module">
