--- a/BulidSchool/index.html
+++ b/BulidSchool/index.html
@@ -8,6 +8,25 @@
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/webp" href="/BulidSchool/img/buildschool.webp">
     <style>
+        .col-12.col-md-6.align-self-center{
+            padding: 0 80px;
+        }
+        .col-12.col-md-6.align-self-center h3{
+            margin-bottom: 20px;
+        }
+        .col-12.col-md-6.align-self-center p{
+            font-size:  17px;
+        }
+        .text-center.fw-bold{
+            margin-top: 20px;
+            margin-bottom: 50px;
+        }
+        h3{
+            font-size: 20px;
+        }
+        .row{
+            margin-bottom: 50px;
+        }
         .banner {
             background-image: linear-gradient(rgba(75, 100, 150, 0.8), rgba(75, 100, 150, 0.8)), url(./img/bannerbg.webp);
             background-position: center;
@@ -21,70 +40,70 @@
 
 <body>
     <div class="container-xl">
-        <div class="row g-5 mx-auto">
+        <div class="row g-5 mx-auto" style="margin-bottom: 200px;">
             <div class="col-12 col-md-6 align-self-center">
                 <img class="mx-auto d-block" src="./img/bcmd.png" alt="">
-                <h3 class="text-center fs-5 fw-bold">Build School</h3>
-                <h3 class="text-center fs-5 fw-bold">/*我們的理念*/</h3>
-                <p class="fs-6 mx-auto">Build = 將程式碼編譯及建置成<span class="text-decoration-underline">可執行的軟體</span></p>
-                <p class="fs-6">Build = <span class="text-decoration-underline">動手做</span></p>
-                <p class="fs-6">Build = <span class="text-decoration-underline">軟體開發職涯的打造者</span></p>
+                <h3 class="text-center fw-bold">Build School</h3>
+                <h3 class="text-center fw-bold">/*我們的理念*/</h3>
+                <p>Build = 將程式碼編譯及建置成<span class="text-decoration-underline">可執行的軟體</span></p>
+                <p>Build = <span class="text-decoration-underline">動手做</span></p>
+                <p>Build = <span class="text-decoration-underline">軟體開發職涯的打造者</span></p>
             </div>
             <div class="col-12 col-md-6 align-self-center">
-                <h3 class="text-center fs-5 fw-bold">實作及就業導向的軟體開發學校</h3>
-                <p class="fs-6">因應數位新時代的來臨，軟體、App、IoT
+                <h3 class="text-center fw-bold">實作及就業導向的軟體開發學校</h3>
+                <p>因應數位新時代的來臨，軟體、App、IoT
                     、SaaS、雲端平台的應用需求大爆炸，軟體工程師的招募需求持續上升，以2016年5月求職平台的統計資料，從高科技、電商、金融、傳產、網路服務、軟體資訊、新創等各行業，台灣至少有 27,000
                     位軟體開發工程師的職缺，甚至日本、新加坡等軟體及App 外商也來台灣求才。</p>
-                <p class="fs-6">為了彌補企業求才所需技能及實務教學上的落差，我們希望能幫助想搭上軟體開發及數位經濟這艘火箭的學員們，打造更有競爭力的職涯!</p>
+                <p>為了彌補企業求才所需技能及實務教學上的落差，我們希望能幫助想搭上軟體開發及數位經濟這艘火箭的學員們，打造更有競爭力的職涯!</p>
             </div>
             <div class="col-12 col-md-6 align-self-center">
-                <h3 class="text-center fs-5 fw-bold">打造專案作品的學習方式<br>(Project-based Learning)</h3>
-                <p class="fs-6">
+                <h3 class="text-center fw-bold">打造專案作品的學習方式<br>(Project-based Learning)</h3>
+                <p>
                     透過身經百戰的實務講師、各大企業的資深軟體工程師或CTO，帶領學員實作一個真正能運作的產品開發，解決真實世界的問題，透過專題過程中的實作，培養解決問題的能力，這裏不只是程式教學或教育訓練，學的不只是技能，而是
                     Learn how to learn，以因應變化多端的軟體開發技能，及自主尋找解答的能力。</p>
             </div>
             <div class="col-12 col-md-6 align-self-center">
                 <img class="mx-auto d-block" src="./img/wongfu.webp" width="107" height="109" alt="">
-                <h3 class="text-center fs-5 fw-bold">動手實作才是真學習</h3>
+                <h3 class="text-center fw-bold">動手實作才是真學習</h3>
             </div>
             <div class="col-12 col-md-6 align-self-center">
                 <img class="mx-auto d-block" src="./img/paper.webp" width="107" height="107" alt="">
-                <h3 class="text-center fs-5 fw-bold">就業銜接</h3>
+                <h3 class="text-center fw-bold">就業銜接</h3>
             </div>
             <div class="col-12 col-md-6 align-self-center">
-                <h3 class="text-center fs-5 fw-bold">真正企業職場所需技能<br>(Career Readiness)</h3>
-                <p class="fs-6">除了透過打造專題作品過程，學到了技術及硬技能外，不同於一般的軟體培訓，我們更加入了簡報技巧、履歷及面試準備、以及真正軟體開發的團隊溝通及運作，這些軟實力
+                <h3 class="text-center fw-bold">真正企業職場所需技能<br>(Career Readiness)</h3>
+                <p>除了透過打造專題作品過程，學到了技術及硬技能外，不同於一般的軟體培訓，我們更加入了簡報技巧、履歷及面試準備、以及真正軟體開發的團隊溝通及運作，這些軟實力
                     (Soft-Skill) 的培養，讓學員能提早做好準備，在職場上成為一位專業的軟體工程師!</p>
             </div>
             <div class="col-12 col-md-6 align-self-center">
-                <h3 class="text-center fs-5 fw-bold">企業導師的連結<br>(Mentor Network)</h3>
-                <p class="fs-6">每一位在軟體開發上有實務經驗的企業導師，他們是各大企業的主管、資深軟體工程師或 CTO，其人際連結及資源將帶給同學更多更好的就業機會，你將比別人站得更高，看得更遠!</p>
+                <h3 class="text-center fw-bold">企業導師的連結<br>(Mentor Network)</h3>
+                <p>每一位在軟體開發上有實務經驗的企業導師，他們是各大企業的主管、資深軟體工程師或 CTO，其人際連結及資源將帶給同學更多更好的就業機會，你將比別人站得更高，看得更遠!</p>
             </div>
             <div class="col-12 col-md-6 align-self-center">
                 <img class="mx-auto d-block" src="./img/rocket.webp" width="113" height="110" alt="">
-                <h3 class="text-center fs-5 fw-bold">連結及影響力</h3>
+                <h3 class="text-center fw-bold">連結及影響力</h3>
             </div>
         </div>
     </div>
     <div class="banner d-flex justify-content-center align-items-center text-white fw-bold"
-        style="height: 129px;letter-spacing: 0.15em">
+        style="height: 129px;letter-spacing: 0.15em;margin-bottom: 50px;">
         18 - 24週的實作及作品開發 - 從訓練、就業、到企業連結
     </div>
     <div class="container-xl">
         <div class="row g-5 mx-auto">
             <div class="col-12 col-md-6 col-lg-3">
-                <p class="text-center fs-6 fw-bold">第 1 - 4 個月</p>
+                <p class="text-center fw-bold">第 1 - 4 個月</p>
                 <img class="mx-auto d-block" src="./img/1s.svg" width="107" height="107" alt="">
-                <h3 class="text-danger text-center fs-6">程式基礎教學</h3>
+                <h3 class="text-danger text-center">程式基礎教學</h3>
                 <ul>
                     <li>業界實戰講師</li>
                     <li>企業主管/創業家/CTO 演講</li>
                 </ul>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
-                <p class="text-center fs-6 fw-bold">第 5 - 6 個月</p>
+                <p class="text-center fw-bold">第 5 - 6 個月</p>
                 <img class="mx-auto d-block" src="./img/2s.svg" width="107" height="107" alt="">
-                <h3 class="text-danger text-center fs-6">專案及作品導向實作</h3>
+                <h3 class="text-danger text-center">專案及作品導向實作</h3>
                 <ul>
                     <li>Web / App 作品開發 - 企業導師指導</li>
                     <li>不只是 Demo - 真實可運作成果</li>
@@ -92,9 +111,9 @@
                 </ul>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
-                <p class="text-center fs-6 fw-bold">第 6 - 7 個月</p>
+                <p class="text-center fw-bold">第 6 - 7 個月</p>
                 <img class="mx-auto d-block" src="./img/3s.svg" width="107" height="107" alt="">
-                <h3 class="text-danger text-center fs-6">作品發表</h3>
+                <h3 class="text-danger text-center">作品發表</h3>
                 <ul>
                     <li>簡報 Demo 及溝通技巧</li>
                     <li>作品及程式碼講解</li>
@@ -102,9 +121,9 @@
                 </ul>
             </div>
             <div class="col-12 col-md-6 col-lg-3">
-                <p class="text-center fs-6 fw-bold">未來及展望</p>
+                <p class="text-center fw-bold">未來及展望</p>
                 <img class="mx-auto d-block" src="./img/4s.webp" width="107" height="107" alt="">
-                <h3 class="text-danger text-center fs-6">就業及企業導師諮詢</h3>
+                <h3 class="text-danger text-center">就業及企業導師諮詢</h3>
                 <ul>
                     <li>就業媒合或未來職涯諮詢</li>
                     <li>企業導師 -人際連結及資源</li>
@@ -113,7 +132,7 @@
         </div>
     </div>
     <div class="banner d-flex justify-content-center align-items-center text-white fw-bold"
-        style="height: 129px;letter-spacing: 0.15eml;margin-bottom: 20px;">
+        style="height: 129px;letter-spacing: 0.15eml;margin-bottom: 50px;">
         在課程及作品實作中，將採用這些工具 - 熟悉實務上軟體開發團隊的運作、分工及真實專案的流程
     </div>
     <div class="container-xl">
@@ -121,7 +140,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img class="mx-auto d-block" style="margin-bottom: 20px;" width="140px" src="./img/git.webp" alt="">
                 <img class="mx-auto d-block" style="margin-bottom: 20px;" width="120px" src="./img/cat.webp" alt="">
-                <h3 class="text-center fs-6">版本控管及程式碼管理</h3>
+                <h3 class="text-center">版本控管及程式碼管理</h3>
                 <ul>
                     <li>學員之練習及作品之程式碼，皆採用主流的 Git 當版本控管，熟悉版控的各種操作及實務專案運用; 課程中公開之練習程式碼，提交至 GitHub 上，其它學員可參考或供講師 Code Review 檢閱，並熟悉 Open Source 生態及工具</li>
                 </ul>
@@ -129,7 +148,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img class="mx-auto d-block" style="margin-bottom: 60px;" width="140px" src="./img/vs.webp" alt="">
                 <img class="mx-auto d-block" style="margin-bottom: 20px;" width="140px" src="./img/ta.webp" alt="">
-                <h3 class="text-center fs-6">作品開發及團隊管理</h3>
+                <h3 class="text-center">作品開發及團隊管理</h3>
                 <ul>
                     <li>除了使用 GitHub 外，專題開發階段也將使用 Microsoft Azure DevOps Services 進行團隊開發、包括程式碼管理、工作項目追蹤、自動化建置等，熟悉一個軟體開發專案之流程、分工及日常工作。</li>
                     <li>也可透過目前許多開發團隊常用的專案管理及看板工具 - Trello 進行工作分派、追蹤、或整個班的工作事項管理</li>
@@ -138,7 +157,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img class="mx-auto d-block" style="margin-top: 10px; margin-bottom: 50px;" width="140px" src="./img/az.webp" alt="">
                 <img class="mx-auto d-block" style="margin-bottom: 20px;" width="55px" src="./img/sql.webp" alt="">
-                <h3 class="text-center fs-6">雲端平台及服務</h3>
+                <h3 class="text-center">雲端平台及服務</h3>
                 <ul>
                     <li>雲端平台的使用已逐漸成為一個成熟軟體開發團隊之基礎，並讓開發、測試、佈署工作更加的便利及自動化。因此學員將使用 Microsoft Azure 當成作品及專案應用系統執行的雲端平台，包括 Azure App Service 建立網站服務、Azure SQL Database 建立資料庫服務</li>
                 </ul>
@@ -146,7 +165,7 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img class="mx-auto d-block" style="margin-top: 10px; margin-bottom: 50px;" width="210px" src="./img/teams.webp" alt="">
                 <img class="mx-auto d-block" style="margin-bottom: 20px;" width="140px" src="./img/sl.webp" alt="">
-                <h3 class="text-center fs-6">團隊溝通協作及通知</h3>
+                <h3 class="text-center">團隊溝通協作及通知</h3>
                 <ul>
                     <li>課程過程中的線上討論、遠端溝通、或技術分享，將可透過 Microsoft Teams 或Slack 工具。另外練習的程式碼提交至 GitHub、或是 Trello 上的工作狀態更新，或是 Azure DevOps 上自動化建置的狀態，皆可發通知至 Microsoft Teams 或 Slack，透過自動化提升工作效率，並熟悉一個軟體開發團隊的協同合作</li>
                 </ul>
@@ -158,7 +177,7 @@
         我們的講師及企業導師擁有在這些公司的工作經歷、擔任主管或資深工程師
     </div>
     <div class="container-xl">
-        <div class="row g-5 mx-auto">
+        <div class="row g-5 mx-auto" style="margin-bottom: 0;">
             <div class="col-12 col-md-6 col-lg-3">
                 <img class="mx-auto d-block" style="margin-bottom: 40px;" width="180px" src="./img/ms.webp" alt="">
                 <img class="mx-auto d-block" src="./img/mvc.webp" width="180px" alt="">
@@ -180,9 +199,9 @@
 
     <div class="footer" style="background-color: #eee; border-top: 5px solid #605e5e;">
         <div class="container-xl">
-            <div class="row">
+            <div class="row mx-auto" style="margin-bottom: 0;">
                 <div class="col-12 col-md-6">
-                    <h4 class="fs-6" style="margin-top: 10px;font-size: 20px; ">合作及接洽</h4>
+                    <h4 style="margin-top: 10px;font-size: 20px; ">合作及接洽</h4>
                     <p style="font-size: 16px;">若為企業欲徵才、或非營利組織或公益團體希望參加我們的培訓或公益合作、或成為我們的講師或擔任指導學生的企業導師 (Inspire Mentor)，請與我們連絡</p>
                 </div>
                 <div class="col-12 col-md-6">
